--- a/myskills.html
+++ b/myskills.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="format-detection" content="telephone=no">
-	<title>John Markowitz</title>
+	<title>John Tesmer</title>
 	<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/all.css" />
 	<link rel="stylesheet" href="css/screen.css" />
@@ -34,18 +34,18 @@
 			<section id="main">
 				<div class="skills_holder">
 					<div class="column">
-						<h2>Graphic skills:</h2>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+						<h2>Data Analysis Skills:</h2>
+						<p>I have basic data analyis skills, and have completed the Corseara Data analyist course.</p>
 						<ul class="progress">
-							<li><span class="photoshop">Photoshop</span></li>
-							<li><span class="illustrator">Illustrator</span></li>
-							<li><span class="indesign">InDesign</span></li>
-							<li><span class="flash">Flash</span></li>
+							<li><span class="excel">Excel / Sheets</span></li>
+							<li><span class="illustrator">R Language</span></li>
+							<li><span class="indesign">SQL</span></li>
+							<li><span class="flash">Tableau</span></li>
 						</ul>
 					</div>
 					<div class="column column-add">
 						<h2>Development  skills:</h2>
-						<p>Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis. Perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
+						<p>I was able to customize this webpage, that's about it.</p>
 						<ul class="progress">
 							<li><span class="html">html</span></li>
 							<li><span class="wordpress">Wordpress</span></li>
